--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boe.ventures",
   "version": "1.0.0",
-  "description": "My groovy Nuxt.js project",
-  "author": "Kristian Elset Bø",
+  "description": "Independent consulting",
+  "author": "Kristian Elset Boe",
   "private": true,
   "scripts": {
     "dev": "nuxt",
